# Arithmetic_circuit_Posit_FPGA

./: .gitignore  README.md  vivado_project.tcl
Arithmetic_circuit/: Arithmetic_circuit.xpr  adder_multiplier_tb_behav.wcfg  input_module_tb_behav.wcfg  spn_tb_behav.wcfg  workflow_tb_behav.wcfg
Arithmetic_circuit/Arithmetic_circuit.cache/wt/: webtalk_pa.xml
Arithmetic_circuit/Arithmetic_circuit.ip_user_files/mem_init_files/: mem_hex_8.txt  mem_spn.txt  ps7_init.tcl
Arithmetic_circuit/Arithmetic_circuit.runs/.jobs/: vrs_config_14.xml  vrs_config_16.xml  vrs_config_2.xml  vrs_config_8.xml
Arithmetic_circuit/Arithmetic_circuit.runs/design_1_axi_bram_ctrl_0_0_synth_1/: design_1_axi_bram_ctrl_0_0.tcl  design_1_axi_bram_ctrl_0_0.vds  design_1_axi_bram_ctrl_0_0_utilization_synth.pb  design_1_axi_bram_ctrl_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  vivado.jou  vivado.pb
Arithmetic_circuit/Arithmetic_circuit.runs/design_1_axi_smc_0_synth_1/: design_1_axi_smc_0.dcp  design_1_axi_smc_0.tcl  design_1_axi_smc_0.vds  design_1_axi_smc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  vivado.jou  vivado.pb
Arithmetic_circuit/Arithmetic_circuit.runs/design_1_processing_system7_0_0_synth_1/: design_1_processing_system7_0_0.dcp  design_1_processing_system7_0_0.tcl  design_1_processing_system7_0_0.vds  design_1_processing_system7_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  vivado.jou  vivado.pb
Arithmetic_circuit/Arithmetic_circuit.runs/synth_1/: TopBlock.dcp  (+9 more)
Arithmetic_circuit/Arithmetic_circuit.srcs/sim_adder_multiplier/new/mem/: CMakeLists.txt
(+190 files in other folders)
